--- a/src/main/appengine/Dockerfile
+++ b/src/main/appengine/Dockerfile
@@ -2,7 +2,7 @@ FROM gcr.io/google_appengine/openjdk
 VOLUME /tmp
 RUN ls
 RUN ls
-COPY /target/ /
+COPY ./target/ /
 RUN ls
 ADD spark-1.0-jar-with-dependencies.jar app.jar
 CMD [ "java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
