--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,9 @@ limitations under the License.
     <properties>
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
-
         <onejar-maven-plugin.version>1.4.4</onejar-maven-plugin.version>
-
         <appengine.maven.plugin>1.3.1</appengine.maven.plugin>
+
         <app.stage.artifact>${project.build.directory}/spark-1.0-jar-with-dependencies.jar</app.stage.artifact>
         <app.stage.stagingDirectory>${project.basedir}/target</app.stage.stagingDirectory>
     </properties>
@@ -66,6 +65,12 @@ limitations under the License.
                 <version>${onejar-maven-plugin.version}</version>
                 <executions>
                     <execution>
+                        <configuration>
+                            <mainClass>com.google.appengine.sparkdemo.Main</mainClass>
+                            <outputDirectory>${project.basedir}/src/main/appengine</outputDirectory>
+                            <onejarVersion>1.0</onejarVersion>
+                            <attachToBuild>true</attachToBuild>
+                        </configuration>
                         <goals>
                             <goal>one-jar</goal>
                         </goals>
